--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,11 +1,10 @@
 doctype html
 html
     head
+        <script src="https://kit.fontawesome.com/cf7295c254.js" crossorigin="anonymous"></script>
         title Wetube
     body
-        header
-            h1 WeTube
+        include ../partials/header
         main
             block content
-        footer
-            span &copy; WeTube
+        include ../partials/footer
