--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        <script src="https://kit.fontawesome.com/cf7295c254.js" crossorigin="anonymous"></script>
+        script(src="https://kit.fontawesome.com/cf7295c254.js", crossorigin="anonymous")
         title Wetube
     body
         include ../partials/header
