--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         script(src="https://kit.fontawesome.com/cf7295c254.js", crossorigin="anonymous")
-        title Wetube
+        title  | #{siteName}
     body
         include ../partials/header
         main
