--- a/views/join.pug
+++ b/views/join.pug
@@ -1,7 +1,7 @@
 extends layouts/main
 
 block content
-    .from__container
+    .from-container
         form(action=routes.join, nethod="post")
             input(type="text", name="name", placeholder="Full Name")
             input(type="email", name="email", placeholder="Email")            
