--- a/views/login.pug
+++ b/views/login.pug
@@ -1,7 +1,7 @@
 extends layouts/main
 
 block content
-    .from__container
+    .from-container
         form(action=routes.login, nethod="post")
             input(type="email", name="email", placeholder="Email")
             input(type="password", name="password", placeholder="Password")
