--- a/views/home.pug
+++ b/views/home.pug
@@ -2,6 +2,6 @@ extends layouts/main
 
 block content
     .videos
-        each item in videos // each [변수] in [배열] 키워드를 통해 반복할 수 있다
+        each item in videos
             h1= item.title
             p= item.description
